# ASELectureCode

./: README.md
Lecture1/: Cite.cpp
Lecture1/Modules/: CMakeLists.txt  Makefile.linux  MultiFile.pro  external.cpp  external.h  foo2.cpp  main.cpp
Lecture2/: BoolFromString.cpp  EnumParam.cpp  alias.cpp  array.cpp  array2.cpp  array3.cpp  dirit.cpp  enum.cpp  enum3.cpp  floatArray.cpp  ifconstexpr.cpp  ifinit.cpp  literal.cpp  namespace1.cpp  namespace2.cpp  namespace3.cpp  namespace4.cpp  pack.cpp  path.cpp  sizeof.c  stdarray.cpp  struct1.cpp  struct2.cpp  struct3.cpp  typedef.cpp  using.cpp
Lecture3/: Untitled 2.c  a.c  a2.c  functionstack.cpp  mem2.c  point.h  smartArray.cpp  swap.cpp  voidPtr.c
Lecture4/Colour/: Auto.pro  Colour.pro  Dynamic.pro
Lecture4/Colour/include/: Colour.h  test.h
Lecture4/Colour/src/: Auto.cpp  Colour.cpp  Dynamic.cpp  Smart.cpp  main.cpp
Lecture4/Memory/: CMakeLists.txt
Lecture4/Memory/include/: Mem.h
Lecture4/Singleton/: CMakeLists.txt
Lecture4/Smart/: CMakeLists.txt
Lecture5Classes/Colour/: CMakeLists.txt
Lecture5Classes/ConstructorInheritance/: example1.cpp
Lecture5Classes/Memory/: CMakeLists.txt  Mem.pro
Lecture5Classes/Shape/: CMakeLists.txt
Lecture7STL/: .gitignore  README.md
Lecture7STL/Algorithm/: countif.cpp  foreach.cpp  generate.cpp  shuffle.cpp
Lecture7STL/Any/: any.cpp
Lecture7STL/Hash/: hash.cpp  un.cpp
Lecture7STL/MoveCtor/: move  move.cpp
Lecture7STL/MoveCtor/move.dSYM/Contents/Resources/DWARF/: move
Lecture7STL/Optional/: optional.cpp
Lecture7STL/OverloadNew/: CMakeLists.txt  ClassNew.h  CustomNew.h  new.cpp
Lecture7STL/Pair/: pair.cpp
Lecture7STL/PointerContain/: main.cpp
Lecture7STL/STLBitset/: BitSet.cpp
Lecture7STL/STLList/: stllist.cpp
Lecture7STL/STLStack/: floatstack.cpp
Lecture7STL/StringView/: string_view.cpp
Lecture7STL/Tuple/: tuple.cpp
Lecture7STL/Variant/: variant.cpp
